updated styles.css. I reduced my padding to ensure that there isn't an overflow, or at least it is hidden

--- a/styles.css
+++ b/styles.css
@@ -1151,7 +1151,14 @@ p {
         background-color: #00c6c7 !important;
         color: white; 
     }
-   
+    @media (max-width: 480px) {
+        body{
+            overflow: hidden !important; 
+        }
+        .about-preview{
+            padding: 0;
+        }
+    }
   /* SERVICES PAGE ENDS*/
   /* -------------------------------------------------Small Screens---------------------------------------------*/
   @media (max-width: 768px) {
@@ -1967,9 +1974,8 @@ p {
      }
     
     .about-preview{
-        padding: 40px 20px;
+        padding: 20px 10px;
         background: white;
-     
         border-radius: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         margin: 0 auto;
